--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
-		<link rel="icon" href="%svelte.assets%/favicon.png" />
+		<link rel="alternate shortcut icon" href="%svelte.assets%/favicon.png" type="image/png"/>
+    <link rel="shortcut icon" href="%svelte.assets%/favicon.svg" type="image/svg+xml" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
