--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,16 @@
 		<link rel="alternate shortcut icon" href="%svelte.assets%/favicon.png" type="image/png"/>
     <link rel="shortcut icon" href="%svelte.assets%/favicon.svg" type="image/svg+xml" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<style>
+			@font-face {
+				font-family: "Basel Grotesk";
+				src: url("%svelte.assets%/Basel-Grotesk-Book.woff2") format("woff2"),
+					url("%svelte.assets%/Basel-Grotesk-Book.woff") format("woff");
+				font-display: swap;
+			}
+		</style>
+
 		%svelte.head%
 	</head>
 	<body>
