--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 		<link rel="alternate shortcut icon" href="%svelte.assets%/favicon.png" type="image/png"/>
     <link rel="shortcut icon" href="%svelte.assets%/favicon.svg" type="image/svg+xml" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="black">
 
 		<style>
 			@font-face {
