Update svelte kit

--- a/src/app.html
+++ b/src/app.html
@@ -3,23 +3,23 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
-		<link rel="alternate shortcut icon" href="%svelte.assets%/favicon.png" type="image/png"/>
-    <link rel="shortcut icon" href="%svelte.assets%/favicon.svg" type="image/svg+xml" />
+		<link rel="alternate shortcut icon" href="%sveltekit.assets%/favicon.png" type="image/png"/>
+    <link rel="shortcut icon" href="%sveltekit.assets%/favicon.svg" type="image/svg+xml" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="black">
 
 		<style>
 			@font-face {
 				font-family: "Basel Grotesk";
-				src: url("%svelte.assets%/Basel-Grotesk-Book.woff2") format("woff2"),
-					url("%svelte.assets%/Basel-Grotesk-Book.woff") format("woff");
+				src: url("%sveltekit.assets%/Basel-Grotesk-Book.woff2") format("woff2"),
+					url("%sveltekit.assets%/Basel-Grotesk-Book.woff") format("woff");
 				font-display: swap;
 			}
 		</style>
 
-		%svelte.head%
+		%sveltekit.head%
 	</head>
 	<body>
-		<div>%svelte.body%</div>
+		<div>%sveltekit.body%</div>
 	</body>
 </html>
