fix newsletter form

--- a/src/app.html
+++ b/src/app.html
@@ -25,6 +25,7 @@
 		<div id="philscookies"></div>
 		<script type="module" src="https://philscookies.vercel.app/index.js" onload="window.philscookies.config({
 			fontFamily: 'Basel Grotesk, sans-serif',
+			text: '#2F73D9',
 			background: 'white',
 			highlight: '#2F73D9',
 			introduction: 'Pour offrir les meilleures expériences, nous utilisons des technologies telles que les cookies pour stocker et/ou accéder aux informations des appareils. Le fait de ne pas consentir ou de retirer son consentement peut avoir un effet négatif sur certaines caractéristiques et fonctions.',
